<?xml version="1.0" encoding="utf-8"?>
<!-- No translation of sample extensions -->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Baro-/Altimeter SmartWatch Widget</string>
    <!-- Title of preference activity -->
    <string name="preference_activity_title">Baro-/Altimeter Widget</string>
    <!-- Configuration text shown in preferences -->
    <string name="configuration_text">Baro-/Altimeter Widget</string>
    <!-- Extension name, shown in preferences -->
    <string name="extension_name">Baro/Altimeter Widget Settings</string>
    <string name="extension_name_baroalti_2x1">Baro/Alti 2x1</string>
    <string name="extension_name_baro_1x1">Baro 1x1</string>
    <string name="extension_name_alti_1x1">Alti 1x1</string>
    <string name="extension_info">Baro-/Altimeter Widget</string>
    <string name="preference_option_read_me">About</string>
    <string name="preference_key_read_me">preference_key_read_me</string>
    <string name="preference_option_read_me_txt">The BaroAltimeter Widget displays the current pressure and relative height.\n\n
        CLICK: Refresh and switch between relative/absolute height.\n
        LONG CLICK: Save current value for relative height.\n\n
        
        The widget is only compatible with WidgetAPI 3 and up</string>
    <string name="def_pressure">999,44 mbar</string>
    <string name="def_height">115,6 m</string>
    <string name="pref_BaroUnit">Pressure Unit</string>
    <string name="pref_BaroUnit_default">MILLI_BAR</string>
    <string name="pref_LengthUnit">Length Unit</string>
    <string name="pref_LengthUnit_default">METRE</string>
    <string name="pref_showRelativePressureOff">Show current pressure with relative height</string>
    <string name="pref_showRelativePressureOn">Show relative pressure with relative height</string>
    <string name="pref_showRelativePressure">Show relative pressure</string>

</resources>